fix: #349 misaligned ui

--- a/src/user.css
+++ b/src/user.css
@@ -296,7 +296,6 @@ html {
   left: 0;
   width: 100%;
   z-index: 5 !important;
-  padding: 0;
 }
 
 .main-topBar-background {
